Handle content overflow correctly

--- a/css/base.less
+++ b/css/base.less
@@ -5,11 +5,11 @@
 }
 
 body {
-  box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.5);
-
   text-align: center;
 
-  position: fixed;
+  position: absolute;
+
+  overflow-x: hidden;
 
   font-size: 1.1em;
 
@@ -27,6 +27,10 @@ body {
     width: 100%;
     height: 100%;
     min-height: 100%;
+
+    box-shadow: inset 0 0 60px rgba(0, 0, 0, 0.5);
+
+    padding: 20px;
 
     > div {
       display: table-cell;
@@ -64,12 +68,9 @@ a {
 }
 
 footer {
-  position: absolute;
+  padding-right: 30px;
 
-  bottom: 0px;
-
-  margin: 15px;
-  padding-right: 35px;
+  margin-top: -45px;
 
   width: 100%;
   text-align: right;
